--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title></title>
 </head>
 <body>
+
+    <button> Genera Numeri </button>
     
     <h2 id="numeri-mem"></h2>
 
-
+<div id="numeri-utente" class="display-numeri">
+    <input type="number">
+    <input type="number">
+    <input type="number">
+    <input type="number">
+    <input type="number">
+    <button id="invia">invia</button>
+</div>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
